# RIM-POS

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  RELEASE.md  SIGNING.md  index.html  package-lock.json  package.json  security_best_practices_report.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate-icon.mjs
src/: App.tsx  navigation.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  backend.rs  backup.rs  cash.rs  core.rs  customers.rs  hardware.rs  invoices.rs  lib.rs  main.rs  migrations.rs  models.rs  products.rs  purchases.rs  reports.rs  sales.rs  security.rs  settings_access.rs  users.rs  validation.rs
src/components/display/: SummaryCards.tsx
src/components/error/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/feedback/: ToastStack.test.tsx  ToastStack.tsx
src/components/layout/: AppShell.tsx
src/components/modals/: CommonModals.tsx
src/components/window/: WindowChrome.tsx
src/features/admin/: AdminView.tsx  AdministrationView.tsx
src/features/auth/: AuthScreens.tsx
src/features/cash/: CashModals.tsx  CashView.tsx
src/features/customers/: CustomerModals.tsx  CustomersPurchasesView.tsx  CustomersView.tsx
src/hooks/: useAdminNavigation.ts  useClock.ts  usePosShortcuts.test.ts  usePosShortcuts.ts  useToasts.ts  useWindowMode.ts
src/lib/: cardTerminals.ts  csv.test.ts  csv.ts  date.ts  money.test.ts  money.ts  numberInput.ts  posApi.ts  shoppingList.ts  xlsx.ts
(+11 files in other folders)
